# earth_moving_distance

./: CMakeLists.txt  README.md  main.cpp
